--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
       {
         "source": "/api/:proxy(*)",
         "destination": "https://api.tino.vn/:path*"
-      }
+      },
+      {"source": "/(.*)", "destination": "/"}
     ]
   }
