--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
       {
-        "source": "/api/:proxy(*)",
-        "destination": "https://api.tino.vn/:path*"
+        "source": "/api/(.*)",
+        "destination": "https://api.tino.vn/(.*)"
       },
       {"source": "/(.*)", "destination": "/"}
     ]
