--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "rewrites": [
       {
         "source": "/api/(.*)",
-        "destination": "https://api.tino.vn/(.*)"
+        "destination": "https://api.tino.vn/(.*)",
+        "changeOrigin": true
       },
       {"source": "/(.*)", "destination": "/"}
     ]
