--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
       {
         "source": "/api/(.*)",
-        "destination": "https://api.tino.vn/(.*)"
+        "destination": "https://ote.tino.org/api/(.*)"
       },
       {"source": "/(.*)", "destination": "/"}
     ]
