--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
 
-      {"source": "/(.*)", "destination": "/"},
+      {"source": "/(.*)", "destination": "/(.*)"},
       {
         "source": "/api/",
         "destination": "https://ote.tino.org/api/"
