--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
     "rewrites": [
- 
+        
       {
         "source": "/api/:path*",
         "destination": "https://ote.tino.org/api/:path*"
+      },
+      {
+        "source": "/(.*)",
+        "destination": "/"
       }
     ]
   }
