--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@arco-themes/vue-mytino": "^0.0.3",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@iconify/vue": "^4.1.1",
@@ -41,12 +42,14 @@
     "vue-tel-input": "^8.3.1"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.55.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "less": "^4.2.0",
     "postcss": "^8.4.32",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.0",
