--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@arco-design/web-vue": "^2.55.0",
+    "@arco-themes/vue-mytino": "^0.0.3",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@iconify/vue": "^4.1.1",
@@ -20,13 +22,16 @@
     "@mediapipe/tasks-vision": "^0.10.12",
     "@tensorflow/tfjs": "^4.17.0",
     "@vue/composition-api": "^1.7.2",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.2",
     "blueimp-load-image": "^5.16.0",
+    "daisyui": "^4.7.3",
     "dayjs": "^1.11.10",
     "face-api.js": "^0.22.2",
     "howler": "^2.2.4",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
     "mobile-device-detect": "^0.4.3",
     "moment": "^2.30.1",
     "npm": "^10.2.5",
@@ -47,6 +52,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "less": "^4.2.0",
     "postcss": "^8.4.32",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.0",
