--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -3,12 +3,12 @@
     "colorWeak": false,
     "navbar": true,
     "menu": true,
-    "topMenu": true,
+    "topMenu": false,
     "hideMenu": false,
     "menuCollapse": false,
     "footer": true,
     "themeColor": "#f00",
-    "menuWidth": 220,
+    "menuWidth": 269,
     "globalSettings": false,
     "device": "desktop",
     "tabBar": false,
