--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.55.0",
-    "@arco-themes/vue-mytino": "^0.0.9",
+    "@arco-themes/vue-mytino": "^0.0.10",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@iconify/vue": "^4.1.1",
@@ -51,6 +51,7 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.4.5",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "less": "^4.2.0",
