--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -4,9 +4,9 @@
     "navbar": true,
     "menu": true,
     "topMenu": false,
-    "hideMenu": false,
+    "hideMenu": true,
     "menuCollapse": false,
-    "footer": true,
+    "footer": false,
     "themeColor": "#f00",
     "menuWidth": 269,
     "globalSettings": false,
