--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.55.0",
-    "@arco-themes/vue-mytino": "^0.0.10",
+    "@arco-themes/vue-mytino2": "^0.0.1",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@iconify/vue": "^4.1.1",
