--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.2",
     "blueimp-load-image": "^5.16.0",
-    "daisyui": "^4.7.3",
     "dayjs": "^1.11.10",
+    "echarts": "^5.5.0",
     "face-api.js": "^0.22.2",
     "howler": "^2.2.4",
     "i": "^0.3.7",
@@ -40,6 +40,7 @@
     "set-interval-async": "^3.0.3",
     "three": "^0.162.0",
     "vue": "^3.3.11",
+    "vue-echarts": "^6.6.9",
     "vue-i18n": "9",
     "vue-phone-number-input": "^1.12.13",
     "vue-router": "^4.2.5",
