--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
         
       {
         "source": "/api/:path*",
-        "destination": "https://ote.tino.org/api/:path*"
+        "destination": "https://my.tino.org/api/:path*"
       },
       {
         "source": "/(.*)",
