--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@iconify/vue": "^4.1.1",
-    
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@tensorflow/tfjs": "^4.6.0",
-
     "@vue/composition-api": "^1.7.2",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.2",
