--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@mediapipe/tasks-vision": "0.10.0",
     "@tensorflow/tfjs": "^4.6.0",
     "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.19",
