--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@iconify/vue": "^4.1.1",
-    "@mediapipe/camera_utils": "^0.3.1675466862",
-    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/face_detection": "^0.4.1646425229",
     "@mediapipe/face_mesh": "^0.4.1633559619",
-    "@mediapipe/tasks-vision": "0.10.0",
-    "@tensorflow/tfjs": "^4.6.0",
+    "@tensorflow-models/face-detection": "^1.0.2",
+    "@tensorflow/tfjs-converter": "^4.18.0",
+    "@tensorflow/tfjs-core": "^4.18.0",
     "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.2",
