--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "blueimp-load-image": "^5.16.0",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.0",
+    "eslint": "^9.1.1",
     "howler": "^2.2.4",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
@@ -40,10 +41,8 @@
     "three": "^0.162.0",
     "vue": "^3.3.11",
     "vue-echarts": "^6.6.9",
-    "vue-i18n": "9",
-    "vue-phone-number-input": "^1.12.13",
-    "vue-router": "^4.2.5",
-    "vue-tel-input": "^8.3.1"
+    "vue-i18n": "9", 
+    "vue-router": "^4.2.5", 
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.55.0",
@@ -53,14 +52,6 @@
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-   
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
