--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "vue": "^3.3.11",
     "vue-echarts": "^6.6.9",
     "vue-i18n": "9", 
-    "vue-router": "^4.2.5", 
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.55.0",
