--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@iconify/vue": "^4.1.1",
-    "@mediapipe/face_detection": "^0.4.1646425229",
-    "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@mediapipe/face_mesh": "^0.43",
     "@tensorflow-models/face-detection": "^1.0.2",
     "@tensorflow/tfjs-converter": "^4.18.0",
     "@tensorflow/tfjs-core": "^4.18.0",
