--- a/package.json
+++ b/package.json
@@ -40,17 +40,19 @@
     "three": "^0.162.0",
     "vue": "^3.3.11",
     "vue-echarts": "^6.6.9",
-    "vue-i18n": "9", 
+    "vue-i18n": "9",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.55.0",
     "@vitejs/plugin-vue": "^4.5.2",
+    "add": "^2.0.6",
     "less": "^4.2.0",
     "postcss": "^8.4.32",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "vite-plugin-mediapipe": "^0.1.0"
   },
   "browserslist": [
     "> 1%",
