--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "npm": "^10.2.5",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "qrcode-vue3": "^1.6.8",
     "set-interval-async": "^3.0.3",
     "three": "^0.164.1",
     "vue": "^3.3.11",
